Fixing a couple mobile layout issues.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,7 +25,8 @@
 }
 
 p {
-    width: 800px;
+    max-width: 800px;
+    min-width: 200px;
 }
 
 .center-text {
@@ -46,12 +47,9 @@ textarea.mat-input-element {
     width: 100%;
 }
 
-.float-right {
-    float: right;
-}
-
 mat-card {
-    width: 800px;
+    min-width: 200px;
+    max-width: 800px;
 }
 
 #dashfly {
